[build-system]
requires = ["setuptools>=61.0.0", 
            "wheel",
            "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sits"
version = "0.7.3"
description = "Online processing of Satellite Image Time Series"
readme = "README.md"
keywords = ["xarray", "datacube", "sits", "satellite", "time series", "STAC"]
authors = [
    { name = "Kenji Ose", email = "kenji.ose@ec.europa.eu" },
]
dynamic = []
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "bottleneck>=1.6.0",
    "dask>=2026.1.1",
    "geogif>=0.3",
    "geopandas>=1.1.2",
    "imageio>=2.37.2",
    "netcdf4>=1.7.3",
    "numpy>=1.26.4",
    "odc-geo>=0.5.0",
    "odc-stac>=0.5.2",
    "pandas>=2.3.3",
    "pillow>=10.4.0",
    "planetary-computer>=1.0.0",
    "pyarrow>=23.0.0",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.4",
    "rioxarray>=0.19.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "sktime>=0.40.1",
    "spyndex>=0.9.0",
    "xarray>=2025.6.1",
]

[project.urls]
"Homepage" = "https://github.com/kenoz/SITS_utils.git"

[project.optional-dependencies]
docs = [
    "sphinx==7.4.7",
    "dask",
    "pyarrow",
    "sphinx_rtd_theme==2.0.0",
    "matplotlib==3.9.1",
    "sphinx-gallery==0.17.0"
]

# UV SPECIFIC: Development dependencies
# These are NOT installable by users
[dependency-groups]
dev = [
    "vcrpy>=8.1.1",
    "pytest-recording>=0.13.4",
    "pytest-profiling>=1.8.1",
    "pytest>=9.0.2",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "test*", "docs*", "examples*", "**/__pycache__"]

[tool.setuptools.package-data]
"sits.data" = ["data/*.geojson"]
"sits.fonts" = ["*.ttf"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.pyright]
include = ["sits/**", "tests/**"]                                                                                                                                
exclude = ["**/__pycache__", "**/.pytest_cache", "**/build", "**/dist"]                                                                                          
reportMissingImports = "warning"                                                                                                                                 
reportMissingModuleSource = "warning"                                                                                                                            
executionEnvironments = [{root = ".", extraPaths = ["tests/utils", "tests"]}]
